==============================================================
LuaTeX 1.13.0 2021-03-12
==============================================================

This is the release for TeX live 2021.
Callback for nesting level used in tracingmacros.
It is is a variant of \tracingstacklevels
by Petr Olsak implemented in pdftex and xetex.
Two TeX January 2021 DEK buglet fixes (H.Hagen)
Mark math glyphs as protected (in order to prevent processing
as text in base mode).
Removed width/ic compensation for traditional math code path.
When restricted system commands is enabled  os.setenv has no effect.
Minor clean-up and bugs fixed (see ChangeLog)



==============================================================
LuaTeX 1.12.0 2020-03-15
==============================================================

This is the release for TeX live 2020.
--shell-restricted now forbids loading of dso (dll/so object)
Scaled virtual font
Aadditional primitives  \eTeXglue[stretch|shrink]order for querying order the etex way.
Extra features runtoks
tex.getmodenames() (as these can differ per engine/version)
Permit nested runtoks in more complex situations of nesting (HH)
More accurate and correct test for tex.[set|get]math
Minor clean-up and bugs fixed



==============================================================
LuaTeX 1.11.1 2019-10-28
==============================================================

First release of luahbtex / luajithbtex, 
luatex / luajittex with harfbuzz.
Small bug fixes, code clean up and a couple of new primitives
to match eTeX.
A new callback lua.getcodepage()  for diagnostic purposes.
*** DROPPED the   "page_objnum_provider" callback, replaced with "page_order_index". ***
See ChangeLog and the manual.



==============================================================
LuaTeX 1.10.0 2019-03-15
==============================================================

This the release for TeX Live 2019. 
Small bug fixes, code clean up.