@@ -1,5 +1,5 @@
 # Doxyfile 1.6.0
-# $Id$
+# $Id: .doxygen 3051 2009-09-20 20:14:53Z oneiros $
 
 # This file describes the settings to be used by the documentation system
 # doxygen (www.doxygen.org) for a project
