@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7420
+#define luatex_svn_revision 7428
